--- a/src/WRA.Umbraco.Web/wwwroot/css/src/blocks/_hot-tip-library.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/blocks/_hot-tip-library.scss
@@ -1,5 +1,10 @@
 .hot-tip-content {
     //
+    &__inner {
+        strong, p {
+            display: inline;
+        }
+    }
 
     &:not(&--expanded) {
         display: -webkit-box;
