Deployment 65aa0948-76a4-49bf-a35c-386609471474: Run number 631

--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/genericSection.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/genericSection.cshtml
@@ -30,6 +30,10 @@
                 className += "w-100";
                 break;
         }
+    } 
+    else
+    {
+        className += "container";    
     }
 
     if (content.HasValue("innerWidth"))
