--- a/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
@@ -19,7 +19,6 @@
     window.productDataSubCategory = "@(Model.Name)";
 </script>
 
-
 <header class="page-header page-header--no-accent">
     <div class="container">
         <div class="container--sm">
@@ -47,8 +46,29 @@
 
 @await Html.PartialAsync("blockgrid/default", sectionsTop)
 
+@if (Model.Parent.Name == "Continuing Education")
+{
+    <div class="container my-4 my-lg-6" style="border: solid 6px red;">
+        <h2 class="js-listings-title h3 pt-4 mt-4 mt-lg-8 border-top border-medium mb-4">Course Bundle</h2>
+        <h1>TO DO: BUNDLE CARDS HERE</h1>
+    </div>
+}
+
 <div class="container my-4 my-lg-6">
-    <h2 class="js-listings-title h3 pt-4 mt-4 mt-lg-8 border-top border-medium mb-4">Individual Classes</h2>
+    <h2 class="js-listings-title h3 pt-4 mt-4 mt-lg-8 border-top border-medium mb-4">
+        @if (Model.Parent.Name == "Continuing Education")
+        {
+            <text>Individual Classes</text>
+        } 
+        else if (Model.Parent.Name == "Professional Development")
+        {
+            <text>Designations</text>
+        } 
+        else
+        {
+            <text>Products</text>
+        }
+    </h2>
     <div class="js-taxonomy-container" hidden>
         <label for="collection-filter" class="d-block text-uppercase font-family-3 fw-normal mb-2">@Model.TaxonomyTypeLabel Type</label>
         <select id="collection-filter" class="js-taxonomy-filter form-select d-inline-block w-auto mb-4 mb-lg-6">
@@ -56,7 +76,6 @@
     </div>
     <div class="position-relative" style="min-height: 350px;">
         <div class="js-product-collection row align-items-md-stretch g-4">
-            @* "The space between our wicked lies is, Where we hope to keep safe from pain" *@
         </div>
         <div class="js-results-loader search-loading" title="Please wait, loading.">
             <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
