--- a/src/WRA.Umbraco.Web/wwwroot/css/src/components/_dialogs.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/components/_dialogs.scss
@@ -26,8 +26,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 75vh;               // temp?
-    max-width: 824px;           // temp?
+    width: 100%;
     margin: auto;
     border-radius: 0.25rem;
     background-color: white;
