Deployment 49e1ddec-e1b6-466c-a71b-117a77f585d3: Run number 649

--- a/src/WRA.Umbraco.Web/Views/CartPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CartPage.cshtml
@@ -95,9 +95,22 @@
                                             </a>
                                         </div>
                                     </td>
-                                    <td class="fw-bold">
+                                    @if(item.OrderLine.TotalPrice.TotalAdjustment != 0)
+                                    {
+                                        <td class="fw-bold">
+                                            <s>@item.OrderLine.TotalPrice.WithoutAdjustments.Formatted().WithoutTax</s>
+                                            @item.OrderLine.TotalPrice.Value.Formatted().WithoutTax
+                                        </td>
+                                    }
+                                    else
+                                    {
+                                        <td class="fw-bold">
+                                            @item.OrderLine.TotalPrice.WithoutAdjustments.Formatted().WithoutTax
+                                        </td>
+                                    }
+                                    @* <td class="fw-bold">
                                         @item.OrderLine.TotalPrice.WithoutAdjustments.Formatted().WithoutTax
-                                    </td>
+                                    </td> *@
                                 </tr>
                             }
                         </tbody>
