Deployment f6871b6b-db96-4c6f-a2aa-99e13349ed15: Run number 650

--- a/src/WRA.Umbraco.Web/Views/CategoryPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CategoryPage.cshtml
@@ -39,9 +39,9 @@
                     <h3 class="mini-card__headline h5 mb-4 px-2 px-md-0 pt-4 pt-md-0">@productGroup.Name</h3>
                     @if (productGroup.HasProperty("description"))
                     {
-                        <p class="px-2 px-md-0">@productGroup.GetProperty("description").GetValue()</p>
+                        <p class="px-2 px-md-0">@productGroup?.GetProperty("description")?.GetValue()</p>
                     }
-                    <a href="@productGroup.Url()" class="mini-card__link fs-normal mt-auto stretched-link text-decoration-none fw-bold">
+                    <a href="@productGroup?.Url()" class="mini-card__link fs-normal mt-auto stretched-link text-decoration-none fw-bold">
                         Views Offerings
                         <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0.82077 8L12.0313 8" stroke="#2560B9" stroke-width="1.37143" stroke-linecap="round" stroke-linejoin="round" />
