--- a/src/WRA.Umbraco.Web/App_Plugins/umbracocommerce/backoffice/views/discount/rules/labelviews/timebaselineitemdiscountrule.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/umbracocommerce/backoffice/views/discount/rules/labelviews/timebaselineitemdiscountrule.html
@@ -1,5 +1,5 @@
 <span>
-  <span ng-if="model.nodeId">Order Lines with '{{ model.nodeId }}' Product / Category</span>
+  <span ng-if="model.nodeId">dates: '{{model.startDate - model.endDate}}'</span>
   <span ng-if="!model.nodeId">
     Order Line Product Rule
   </span>
