--- a/src/WRA.Umbraco.Web/Views/ProductPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/ProductPage.cshtml
@@ -12,7 +12,7 @@
 @{
     var sections = Model.Value<IEnumerable<BlockGridItem>>("blockContent");
 
-    var discountsAttchedToProduct = _wraProductService.GetTimeBasedDiscounts(Model);
+    var discountsAttchedToProduct = _wraProductService.GetTimeBasedDiscounts(Model) ?? [];
     var multiVariantProductPage = Model as ProductPage;
 
     var store = Model.Value<StoreReadOnly>("store", fallback: Fallback.ToAncestors);
@@ -173,24 +173,36 @@
         {
             @Html.Hidden("productReference", product.GetProductReference())
 
-            <div class="d-flex flex-row align-items-baseline w-100 mb-1">
-                <div class="h3 mb-0">@(product.MemberPricing?.Formatted())</div>
-                <div class="fs-sm mb-3" style="color: var(--bs-gray-30)">
-                    &nbsp;member pricing
-                </div>
-            </div>
-            <div class="mt-n3 d-flex flex-row align-items-baseline fs-sm w-100" style="color: var(--bs-gray-30)">
-                @(product.NonMemberPricing.Formatted())
-                <div class="mb-3">&nbsp;non-member pricing</div>
-            </div>
-            @if(discountsAttchedToProduct.Any()){
-                    @foreach (var discount in discountsAttchedToProduct)
-                    {
-                        <div class="mt-n3 d-flex flex-row align-items-baseline fs-sm w-100" style="color: var(--bs-gray-30)">
-                            @product.NonMemberPricing.PercentDiscountedDisplayPrice(discount.Percentage)?.Formatted()
-                            <div class="mb-3">&nbsp;Through @discount.EndDate.ToString("MMMM dd")</div>
+            @if(discountsAttchedToProduct?.Any() ?? false){
+                @foreach (var discount in discountsAttchedToProduct)
+                {
+                    if(discount.Active){
+                        <div class="d-flex flex-row align-items-baseline w-100 mb-1">
+                            <div class="h3 mb-0">@product.ProductSnapshot.Prices.FirstOrDefault().PercentDiscountedDisplayPrice(discount.Percentage)?.Formatted()</div>
+                            <div class="fs-sm mb-3" style="color: var(--bs-gray-30)">
+                                &nbsp;Through @discount.EndDate.ToString("MMMM dd")
+                            </div>
                         </div>
                     }
+                    else{
+                        <div class="mt-n3 d-flex flex-row align-items-baseline fs-sm w-100" style="color: var(--bs-gray-30)">
+                            @product.ProductSnapshot.Prices.FirstOrDefault().PercentDiscountedDisplayPrice(discount.Percentage)?.Formatted()
+                            <div class="mb-3">&nbsp;After @discount.StartDate.ToString("MMMM dd")</div>
+                        </div>
+                    }
+                }
+            }
+            else{
+                <div class="d-flex flex-row align-items-baseline w-100 mb-1">
+                    <div class="h3 mb-0">@(product.MemberPricing?.Formatted())</div>
+                    <div class="fs-sm mb-3" style="color: var(--bs-gray-30)">
+                        &nbsp;member pricing
+                    </div>
+                </div>
+                <div class="mt-n3 d-flex flex-row align-items-baseline fs-sm w-100" style="color: var(--bs-gray-30)">
+                    @(product.NonMemberPricing.Formatted())
+                    <div class="mb-3">&nbsp;non-member pricing</div>
+                </div>
             }
             @if (product.DoorPricing != null)
             {
